Fix some overlaps issues when it comes to smaller screens, in info and signup sections

--- a/style.css
+++ b/style.css
@@ -79,10 +79,14 @@ a {
     color: #1f2937;
     font-weight: 900;
     margin-bottom: 32px;
+    text-align: center;
 }
 
 .info-content {
     display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 8px;
 }
 
 .info-card {
@@ -91,6 +95,8 @@ a {
     justify-content: center;
     align-items: center;
     text-align: center;
+    flex-basis: 200px;
+    color: #1f2937;
 }
 
 .info-img {
@@ -132,6 +138,7 @@ a {
     justify-content: space-between;
     border-radius: 10px;
     align-items: center;
+    gap: 32px;
 }
 
 .signup-title {
